--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,4 +3,11 @@ name = "checkstyle_formatter"
 version = "0.0.1"
 authors = ["Sanemat <o.gata.ken@gmail.com>"]
 
+[badges.appveyor]
+project_name = "sanemat/rust-checkstyle_formatter"
+repository = "packsaddle/rust-checkstyle_formatter"
+
+[badges.travis-ci]
+repository = "packsaddle/rust-checkstyle_formatter"
+
 [dependencies]
