--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,20 @@
 name = "checkstyle_formatter"
 version = "0.0.1"
 authors = ["Sanemat <o.gata.ken@gmail.com>"]
+categories = ["development-tools"]
+description = "checkstyle formatter."
+include = [
+    "src/**/*",
+    "Cargo.toml",
+    "changelog.md",
+    "readme.md",
+    "license-apache",
+    "license-mit",
+]
+keywords = [
+    "checkstyle",
+]
+license = "MIT/Apache-2.0"
 
 [badges.appveyor]
 project_name = "sanemat/rust-checkstyle_formatter"
