chore(meta): fix meta

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ keywords = [
     "checkstyle",
 ]
 license = "MIT/Apache-2.0"
+repository = "https://github.com/packsaddle/rust-checkstyle_formatter"
 
 [badges.appveyor]
 project_name = "sanemat/rust-checkstyle_formatter"
