--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,4 @@
 [package]
-name = "checkstyle_formatter"
-version = "0.0.1"
 authors = ["Sanemat <o.gata.ken@gmail.com>"]
 categories = ["development-tools"]
 description = "checkstyle formatter."
@@ -12,11 +10,11 @@ include = [
     "license-apache",
     "license-mit",
 ]
-keywords = [
-    "checkstyle",
-]
+keywords = ["checkstyle"]
 license = "MIT/Apache-2.0"
+name = "checkstyle_formatter"
 repository = "https://github.com/packsaddle/rust-checkstyle_formatter"
+version = "0.0.1"
 
 [badges.appveyor]
 project_name = "sanemat/rust-checkstyle_formatter"
@@ -26,3 +24,4 @@ repository = "packsaddle/rust-checkstyle_formatter"
 repository = "packsaddle/rust-checkstyle_formatter"
 
 [dependencies]
+quick-xml = "0.9.4"
